# simscore-api

./: .env.sample  .gitignore  Analyzer.py  CLAUDE.md  Dockerfile  README.md  TESTING.md  api_specs.md  app.py  centroid_plots.ipynb  fly.dev.toml  fly.prod.toml  fly.toml  main.py  package-lock.json  pyproject.toml  pytest.ini  run_auth_tests.sh
.github/workflows/: fly-deploy-dev.yml  fly-deploy-prod.yml
app/api/v0/helpers/: .nltk_resources_cache  Analyzer.py
app/api/v0/routes/: __init__.py  analyze.py  categorise.py  session.py  star_rating.py  validate.py
app/api/v1/dependencies/: auth.py  feature_flags.py
app/api/v1/models/: request.py  response.py
app/api/v1/routes/: __init__.py  auth.py  ideas.py
app/core/: config.py  db.py  limiter.py  scheduler.py  security.py  settings.py
app/services/: analyzer.py  clustering.py  credits.py  types.py
aux_tools/: convert_file.py
aux_tools/google/: ColumnSelector.html  code.gs
helpers/: Analyzer.py  db.py
routes/: analyze.py  categorise.py  session.py  star_rating.py  validate.py
supabase/: config.toml
supabase/migrations/: 001_credit_system.sql  002_api_keys.sql  003_rls_updates.sql  003_updated_add_credits.sql  004_service_role_api_key_access.sql  005_cascade_user_deletion.sql
tests/: conftest.py
tests/api/v1/routes/: test_auth.py  test_ideas.py  test_rate_limit.py
tests/integration/: test_auth_basic.py  test_auth_guest.py
